# TinkerBot

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SetUp.md  config.json  emojis.json  index.js  package-lock.json  package.json  pyproject.toml  requirements.txt
buttons/: compile_btn.js  wc_submit.js
commands/general/: ping.js
events/: buttons.js  interactionCreate.js  messageCreate.js  modals.js  ready.js
handlers/: buttons.js  events.js  message.js  modal.js  slashCommand.js
modals/: submit_modal.js  wc_submission_modal.js
slashCommands/developer/: eval.js
slashCommands/gamenight/: register.js  submit.js  unregister.js  view-player-stats.js  viewQuestions.js
slashCommands/info/: compile.js  ping.js
slashCommands/wc/: WC_Submission.js.txt
src/: creds.py  main.py
src/cogs/hello/: hellocmd.py
src/cogs/question_of_the_day/: QuestionOfTheDay.py
src/cogs/wc_submission/: wc_submission.py
utils/: disableButtons.js  generateResponse.js
